kubernetes/hvac-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hvac-service
spec:
  selector:
    app: hvac-controller
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
