kubernetes/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  labels:
    app: metrics-controller
spec:
  selector:
    app: metrics-controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
