kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grp01eq6-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/user01eq6/metrics(/|$)(.*)"  # Matches all paths under /user01eq6/metrics
        pathType: Prefix
        backend:
          service:
            name: metrics-service   # Flask service name
            port:
              number: 80            # Flask service port
